--- a/be/pom.xml
+++ b/be/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.example</groupId>
     <artifactId>webshixun</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>webshixun</name>
+    <name>be</name>
     <description>webshixun</description>
     <properties>
         <java.version>1.8</java.version>
